- add favicon and meta - fix typos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Рома, UX/UI дизайнер | For IntelliStart</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.css">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/77e11f2dd5.js" crossorigin="anonymous"></script>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <meta name="msapplication-config" content="favicon/browserconfig.xml" />
+  <meta name="msapplication-TileColor" content="#305C3E">
+  <meta name="theme-color" content="#305C3E">
+  <meta name="description" content="Рома, UX/UI дизайнер | For IntelliStart" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Рома, UX/UI дизайнер | For IntelliStart">
+  <meta property="og:image" content="">
+  <meta name="twitter:image" content="">
+  <meta property="og:url" content="https://n-apps.github.io/IntelliStartTestTask/">
+  <meta property="og:site_name" content="https://n-apps.github.io/IntelliStartTestTask/">
+  <meta property="og:type" content="article">
+  <meta property="og:locale" content="ru_RU" />
 </head>
 
 <body>
@@ -26,7 +45,7 @@
         <li class="nav-item"><a href="#home" class="nav-link">Привет</a></li>
         <li class="nav-item"><a href="#my-background" class="nav-link">Мой опыт</a></li>
         <li class="nav-item"><a href="#about-me" class="nav-link">Пару слов обо мне</a></li>
-        <li class="nav-item"><a href="#portfolio" class="nav-link">Мои случайные картинки</a></li>
+        <li class="nav-item"><a href="#portfolio" class="nav-link">Мои !случайные картинки</a></li>
         <li class="nav-item"><a href="#footer" class="nav-link">Контакты</a></li>
       </ul>
     </nav>
@@ -58,7 +77,7 @@
         <strong>платформа для мероприятий</strong>
         <p>2018 — 2020 | <a target="_blank" href="https://eventssion.com">Link</a></p>
         <p>
-          Дизайнер мобильного приложения. Управление командой дизайнеров
+          Дизайнер мобильного приложения. Управление командой дизайнеров.
         </p>
       </div>
       <!-- Experience -->
@@ -76,10 +95,10 @@
   <!-- About me -->
   <section class="about-me" id="about-me">
     <h2 class="section-title section-title-about-me">Немного о себе</h2>
-    <p class="section-subtitle section-subtitle-about-me"> Двигаю серые квадратики, улучшаю интерфейсы, иногда программирую.</p>
+    <p class="section-subtitle section-subtitle-about-me">Двигаю серые квадратики, улучшаю интерфейсы, иногда программирую.</p>
 
     <div class="about-me-content">
-      <p>👋 Привет, я Рома! Рисую серые квадратики дизайн, улучшаю интерфейсы и немножко программирую под Android. Хочу вернуться в разработку, так как у статичной картинки мало романтики и КПД.</p>
+      <p>👋 Привет, я Рома! <strike style="opacity:0.7;">Рисую серые квадратики</strike> Делаю дизайн, улучшаю интерфейсы и немножко программирую под Android. Хочу вернуться в разработку, так как у статичной картинки мало романтики и КПД.</p>
       <p>💻 Работаю в странной продуктовой команде, пилим прототипы со скоростью света. UX/UI-дизайнер, начинал с .NET, затем ушел в Android. Всю жизнь больше тяготел к юай, а не к апишкам. Сейчас работаю дизайнером, проектирую и улучшаю интерфейсы.
         Также есть личный проект под Android.</p>
       <p>🇺🇦 Живу в Украине.</p>
@@ -88,7 +107,7 @@
       <p>💚 Люблю:</p>
       <ul>
         <li>находить классную музыку с 100+ прослушиваний на Ютубе и которой нет на стримингах.</li>
-        <li>настолки. ценю как общепризнанную классику, так и пати-геймы на 1 раз.</li>
+        <li>настолки. Ценю как общепризнанную классику, так и пати-геймы на 1 раз.</li>
         <li>получать уведомления о 5⭐ на <a href="https://github.com/n-apps/ScoreCounter" target="_blank">свое приложение.</a></li>
         <li>хот-доги в булке и чебуреки.</li>
         <li>мучения (Windows + Firefox + Android).</li>
