--- a/score-counter.html
+++ b/score-counter.html
@@ -4,10 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Рома, UX/UI дизайнер | For IntelliStart</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.css">
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/77e11f2dd5.js" crossorigin="anonymous"></script>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <meta name="msapplication-config" content="favicon/browserconfig.xml" />
+  <meta name="msapplication-TileColor" content="#305C3E">
+  <meta name="theme-color" content="#305C3E">
+  <meta name="description" content="Рома, UX/UI дизайнер | For IntelliStart" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Рома, UX/UI дизайнер | For IntelliStart">
+  <meta property="og:image" content="">
+  <meta name="twitter:image" content="">
+  <meta property="og:url" content="https://n-apps.github.io/IntelliStartTestTask/">
+  <meta property="og:site_name" content="https://n-apps.github.io/IntelliStartTestTask/">
+  <meta property="og:type" content="article">
+  <meta property="og:locale" content="ru_RU" />
 </head>
 
 <body>
