Make iframe responsive

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <!-- spotify -->
   <section class="spotify">
     <h2 class="section-title section-title-spotify">Мой треклист</h2>
-    <iframe src="https://open.spotify.com/embed/playlist/7l76Uft1j0j2p4pdLjGvUP?utm_source=generator" width="600" height="380" frameBorder="0" allowfullscreen=""
+    <iframe src="https://open.spotify.com/embed/playlist/7l76Uft1j0j2p4pdLjGvUP?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen=""
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
   </section>
 
@@ -177,11 +177,6 @@
       <li>
         <a class="social-list-item" target="_blank" href="https://www.instagram.com/artificially.busy/">
           <i class="fab fa-instagram-square"></i>
-        </a>
-      </li>
-      <li>
-        <a class="social-list-item" target="_blank" href="https://open.spotify.com/user/artificially_busy?si=FGW7GE86SXmipcw9meJHpQ">
-          <i class="fab fa-spotify"></i>
         </a>
       </li>
     </ul>
